<resources>
    <string name="app_name">Firebase Authentication</string>
    <string name="login">Have an Account? Sign In</string>
    <string name="username">Username</string>
    <string name="create_account">Create Account</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="sign_in_to_continue">Sign In to Continue</string>
    <string name="email_error">Email is required</string>
    <string name="password_error">Password is Required</string>
    <string name="not_match_error">Password Do Not Match</string>
    <string name="failure">Failure</string>
    <string name="success">Success</string>
    <string name="email">Email</string>
    <string name="proceed">Continue</string>
    <string name="join">New User? Join</string>
    <string name="logine_error">Login Failure</string>
    <string name="logout">Logout</string>
    <string name="login_success">Login Success</string>
    <string name="success_login">LoggedIn Successfully</string>
    <string name="google_signin">Google SignIn</string>
</resources>
